Fix display of canvas on Mobile Safari
Updates #49

--- a/public/global.css
+++ b/public/global.css
@@ -74,6 +74,8 @@ button {
 }
 select{
   appearance: none;
+  -webkit-appearance: none;
+  border-radius: 0;
   background-color: transparent;
   border: none;
   padding: 0 1em 0 0;
